fix contact page spacing on mobile and colour adjustment on companies div

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
     background-repeat: no-repeat;
     background-size: 75% 55%;
     background-position: center;
-    background-color: #c2ced5;
+    background-color: #e7eff1;
     height: 140px;
     width: 200px;
 }
@@ -44,7 +44,7 @@
     background-size: cover;
     background-image: linear-gradient(
         to right,
-        #5e7480,
+        #748893,
         #c2ced5
     )!important;
 }
